# simple-py

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/: renovate.json5
.github/workflows/: autofix.yml  binary-bump.yml  bump.yml  ci.yml
src/simple_py/: __about__.py
tests/: __init__.py  test_simple.py
