[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-py"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Azmain", email = "azmainmahatab012@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Azmain/simple-py#readme"
Issues = "https://github.com/Azmain/simple-py/issues"
Source = "https://github.com/Azmain/simple-py"

[tool.hatch.version]
path = "src/simple_py/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/simple_py tests}"

[tool.coverage.run]
source_pkgs = ["simple_py", "tests"]
branch = true
parallel = true
omit = [
  "src/simple_py/__about__.py",
]

[tool.coverage.paths]
simple_py = ["src/simple_py", "*/simple-py/src/simple_py"]
tests = ["tests", "*/simple-py/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
